add registration button near login

--- a/tom_registration/templates/tom_registration/partials/register_button.html
+++ b/tom_registration/templates/tom_registration/partials/register_button.html
@@ -1,4 +1,6 @@
 {% load bootstrap4 %}
-<li class="nav-item">
-    <a class="btn btn-outline-info" title="signup" href="{% url 'registration:register' %}">Register</a>
-</li>
+{% if not user.is_authenticated %}
+    <li class="nav-item">
+        <a class="btn btn-outline-info" title="signup" href="{% url 'registration:register' %}">Register</a>
+    </li>
+{% endif %}
