add dynamic versioning to registration form

--- a/tom_registration/templates/tom_registration/register_user.html
+++ b/tom_registration/templates/tom_registration/register_user.html
@@ -12,4 +12,5 @@
   </button>
 {% endbuttons %}
 </form>
+<p><em><a target="_blank" href="https://github.com/TOMToolkit/tom_registration">TOM Registration</a> version {{ version }}</em></p>
 {% endblock %}
