--- a/tom_registration/templates/tom_registration/register_user.html
+++ b/tom_registration/templates/tom_registration/register_user.html
@@ -3,9 +3,10 @@
 {% block title %}Sign up{% endblock %}
 {% block content %}
 <h2>Sign up</h2>
-<form action="" method="POST">
+<form action="{% url 'registration:register' %}" method="POST">
 {% csrf_token %}
 {% bootstrap_form form %}
+{% bootstrap_formset form.user_profile_formset %}
 {% buttons %}
   <button type="submit" class="btn btn-primary">
     Register
