--- a/tom_registration/templates/tom_registration/approve_user.html
+++ b/tom_registration/templates/tom_registration/approve_user.html
@@ -5,6 +5,7 @@
 <form action="{% url 'registration:approve' object.id %}" method="POST">
 {% csrf_token %}
 {% bootstrap_form form %}
+{% bootstrap_formset form.user_profile_formset %}
 {% buttons %}
   <button type="submit" class="btn btn-primary">
     Approve
